Add test inputs and move all tests to test folder.

--- a/tests/MyTest/config.cfg
+++ b/tests/MyTest/config.cfg
@@ -6,4 +6,4 @@ I/O 2 CDROM
 # PROGRAM <arrival time> <program file name>
 PROGRAM 8 firefox.dat
 PROGRAM 5 primescalculator.dat
-PROGRAM 11 spice.dat
+#PROGRAM 11 spice.dat
